--- a/components/button.scss
+++ b/components/button.scss
@@ -1,16 +1,15 @@
-@import '../variables';
 @import '../mixins';
 
 .button {
   outline: 0;
   border: 0;
   border-radius: 50px;
-  padding: 0  map-get($sizes, 28);
-  height: map-get($sizes, 48);
+  padding: 0  $size-28;
+  height: $size-48;
   box-shadow: 2px 2px 10px rgba($color-primary, 0.5);
-  color: $color-fon;
+  color: $color-withe;
   background: $color-primary;
-  transition: background ease $animate--time;
+  transition: background ease $animate-time;
   cursor: pointer;
   user-select: none;
 
