--- a/_variables.scss
+++ b/_variables.scss
@@ -14,7 +14,7 @@ $color-gray: #8c9299;
 $color-element: #545c66;
 $color-element-light: #656d78;
 
-$container: (
+$breakpoints: (
   xl: 1200px,
   lg: 992px,
   md: 768px,
