--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
+@import 'fonts';
 @import 'mixins';
 @import 'grid';
 
