--- a/_mixins.scss
+++ b/_mixins.scss
@@ -55,22 +55,8 @@
 }
 
 @mixin media($Device) {
-  @if $Device == xl {
-    @media screen and (max-width: map-get($breakpoints, xl) - 1px) {
-      @content;
-    }
-  } @else if $Device == lg {
-    @media screen and (max-width: map-get($breakpoints, lg) - 1px) {
-      @content;
-    }
-  } @else if $Device == md {
-    @media screen and (max-width: map-get($breakpoints, md) - 1px) {
-      @content;
-    }
-  } @else if $Device == sm {
-    @media screen and (max-width: map-get($breakpoints, sm) - 1px) {
-      @content;
-    }
+  @media screen and (max-width: map-get($breakpoints, $Device) - 1px) {
+    @content;
   }
 }
 
