--- a/_mixins.scss
+++ b/_mixins.scss
@@ -194,6 +194,13 @@
     height: 50% !important;
   }
 
+  .w#{$screen-name}-25 {
+    width: 50% !important;
+  }
+  .h#{$screen-name}-25 {
+    height: 50% !important;
+  }
+
   .f#{$screen-name}-l {
     font-weight: 300;
   }
